--- a/MyCorpIdentityServer/packages.config
+++ b/MyCorpIdentityServer/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="IdentityServer3" version="2.5.4" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="1.2.1" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.1.0" targetFramework="net45" />
@@ -8,4 +9,7 @@
   <package id="Microsoft.ApplicationInsights.Web" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net45" />
+  <package id="Owin" version="1.0" targetFramework="net45" />
 </packages>
