--- a/SecuredWebAPI/SecuredWebAPI.csproj
+++ b/SecuredWebAPI/SecuredWebAPI.csproj
@@ -262,6 +262,7 @@
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="TestClass.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\HelpPage\HelpPage.css" />
